syntax = "proto3";

package product;

service ProductService {
    rpc CreateSamples(CreateSamplesRequest) returns (CreateSamplesResponse);
    rpc GetProductsInfo(GetProductsInfoRequest) returns (GetProductsInfoResponse);
}

message CreateSamplesRequest {
    
}

message CreateSamplesResponse {
    bool success = 1;
}

message GetProductsInfoRequest {
    repeated string productIds = 1;
}

message GetProductsInfoResponse {
    message ProductInfo {
        string id = 1;
        string name = 2;
        string description = 3;
        float price = 4;
        uint32 stock = 5;
    }

    repeated ProductInfo products = 1;
}